# Lorenz-Attractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/doxygen/: Doxyfile.in
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
